--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+/* Fonts */
+.recipe {
+  font-family: 'Pacifico', cursive;
+}
+.ovenNumbers {
+  font-family: 'VT323', monospace;
+}
+
+
 /*Kitchen Background*/
 /*floor*/
 .floor {
@@ -7,7 +16,7 @@
     bottom: 0%;
     background-color: #CCC2BC;
   }
-  
+
   /*counter*/
   .counterDoorknob1 {
     position: absolute;
@@ -18,7 +27,7 @@
     left: 18%;
     background-color: black;
   }
-  
+
   .counterDoorknob2 {
     position: absolute;
     margin: 0px;
@@ -28,7 +37,7 @@
     left: 30%;
     background-color: black;
   }
-  
+
   .counterDoorknob3 {
     position: absolute;
     margin: 0px;
@@ -38,7 +47,7 @@
     right: 30%;
     background-color: black;
   }
-  
+
   .counterDoorknob4 {
     position: absolute;
     margin: 0px;
@@ -48,7 +57,7 @@
     right: 18%;
     background-color: black;
   }
-  
+
   .counterDoor {
     display: inline-block;
     margin: 2%;
@@ -56,7 +65,7 @@
     height: 90%;
     background-color: #F7ECDF;
   }
-  
+
   .counterSurface{
     position: absolute;
     margin: 0px;
@@ -66,7 +75,7 @@
     left: 0;
     background-color: #CEBD98;
   }
-  
+
   .counter{
     position: absolute;
     text-align: center;
@@ -77,7 +86,7 @@
     left: 0;
     background-color: #F7ECDF;
   }
-  
+
   /*Oven*/
   .ovenBackground{
     position: absolute;
@@ -89,7 +98,7 @@
     right: 0;
     background-color: #D7CDC4;
   }
-  
+
   .ovenDoor{
     position: absolute;
     text-align: center;
@@ -100,7 +109,7 @@
     right: 0;
     background-color: #F7ECDF;
   }
-  
+
   .ovenBottom{
     position: absolute;
     text-align: center;
@@ -111,7 +120,7 @@
     right: 0;
     background-color: #645A54;
   }
-  
+
   .ovenTop{
     position: absolute;
     text-align: center;
@@ -122,7 +131,7 @@
     right: 0;
     background-color: #F7ECDF;
   }
-  
+
   .ovenButtons{
     display: inline-block;
     text-align: center;
@@ -134,8 +143,8 @@
     right: 0;
     background-color: #D65945;
   }
-  
-  
+
+
   /*Toast*/
   .toast{
     position: absolute;
@@ -147,7 +156,7 @@
     border-radius: 20px 20px 20px 20px;
     background-color: #F7D49D;
   }
-  
+
   /*Bowl*/
   .bowl{
         border-bottom: 100px solid red;
@@ -156,4 +165,3 @@
         height: 0;
         width: 100px;
       }
-  
