--- a/css/oven.css
+++ b/css/oven.css
@@ -27,15 +27,23 @@ body {
   background-color: white;
 }
 
-/* .temp-text{
+.temp-text{
   position: absolute;
-  top: 40px;
-  left: 10px;
+  top: 15px;
+  left: 20px;
   font-family: helvetica;
   font-size: 100%;
-  font-color: blue;
+  color: blue;
+}
 
-} */
+.time-text{
+  position: absolute;
+  top: 50px;
+  left: 100px;
+  font-family: helvetica;
+  font-size: 100%;
+  color: blue;
+}
 
 .oven-temp {
   position: absolute;
@@ -61,9 +69,9 @@ body {
   border-radius: 50%;
 }
 
-.timer-indicator {
+/* .timer-indicator {
 
-}
+} */
 
 .oven-interior {
   position: absolute;
