Click to move bread

--- a/css/bread_final.css
+++ b/css/bread_final.css
@@ -3,7 +3,7 @@
   }
   
   /*bread final stage*/
-  .bread_final {
+  .bread_counter {
     position: relative;
     width: 200px;
     height: 115px;
