--- a/css/recipe-book.css
+++ b/css/recipe-book.css
@@ -1,12 +1,11 @@
-* {
-  margin: 0px;
-  padding: 0px;
+#book {
+  margin: 0;
+  position: absolute;
+  width: 600px;
+  height: 400px;
+  top: 8%;
+  left: 5%;
 }
-
-body {
-  background: lightgrey;
-}
-
 .book-cover {
   position: absolute;
   top: 50px;
@@ -15,6 +14,7 @@ body {
   width: 600px;
   height: 350px;
   border-radius: 5px;
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .pages {
