--- a/css/bread_in_oven.css
+++ b/css/bread_in_oven.css
@@ -1,16 +1,16 @@
 /*bread first stage*/
 .bread_oven {
     position: relative;
-    width: 120px;
-    height: 40px;
+    width: 9%;
+    height: 7%;
     background-color: #F9E4C2;
     border-radius: 30px 30px 0px 0px;
     border-bottom: 5px solid #F2B394;
     /* z-index: 2; */
     overflow: hidden;
     animation: pulse 2s infinite;
-    left:69%;
-    top: 730px;
+    left:68%;
+    top: 64%;
   }
 
   .bread1__strip {
