--- a/css/oven.css
+++ b/css/oven.css
@@ -1,18 +1,18 @@
 .oven-exterior {
   position: absolute;
   top: 0px;
-  left: 20px;
+  left: 2%;
   background-color: #C2E4EA;
-  width: 400px;
-  height: 495px;
-  border-radius: 15px;
+  width: 96%;
+  height: 100%;
+  border-radius: 12px;
 }
 
 
 #tempUp {
   position: absolute;
-  top: 50px;
-  left: 120px;
+  top: 30%;
+  left: 75%;
   width: 0;
   height: 0;
   border-left: 10px solid transparent;
@@ -22,8 +22,8 @@
 
 #tempDown {
   position: absolute;
-  top: 50px;
-  left: 155px;
+  top: 30%;
+  left: 50%;
   width: 0;
   height: 0;
   border-left: 10px solid transparent;
@@ -32,72 +32,48 @@
 
 }
 
-/* #up-text {
-    font-family: 'Pacifico', cursive;
-    position: absolute;
-    top: 15px;
-    left: 95px;
-    font-size: 70%;
-    color: #3B5570;
-}
-
-#down-text {
-  font-family: 'Pacifico', cursive;
-  position: absolute;
-  top: 15px;
-  left: 145px;
-  font-size: 70%;
-  color: #3B5570;
-} */
-
 .oven-display {
   position: absolute;
-  top: 35px;
-  left: 25px;
-  width: 200px;
-  height: 50px;
+  top: 10%;
+  left: 10%;
+  width: 50%;
+  height: 2.5vw;
   border-radius: 5px;
   background-color: white;
 }
 
 .temp-text{
+  margin: 0;
   position: absolute;
-  top: 15px;
-  left: 50px;
-  font-family: 'Pacifico';
-  font-size: 150%;
-  color: blue;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 6%;
+  width: 40%;
+  text-align: center;
+  font-size: 2.2vw;
+  color: #3B5570;
 }
-
-/* .time-text{
-  position: absolute;
-  top: 50px;
-  left: 100px;
-  font-family: helvetica;
-  font-size: 100%;
-  color: blue;
-} */
 
 .oven-temp {
   position: absolute;
-  top: 35px;
-  left: 250px;
-  width: 50px;
-  height: 50px;
+  top: 10%;
+  left: 64%;
+  width: 2.5vw;
+  height: 2.5vw;
   border-radius: 50%;
   background-color: #95BEC4;
 }
 
 .oven-timer {
-  left: 320px;
+  left: 80%;
 }
 
 .temp-indicator {
   position: absolute;
   top: 0px;
-  left: 20px;
-  width: 10px;
-  height: 20px;
+  left: 40%;
+  width: 20%;
+  height: 40%;
   background-color: #3B5570;
   border-radius: 50%;
 }
@@ -108,11 +84,11 @@
 
 .oven-interior {
   position: absolute;
-  top: 150px;
-  left: 50px;
+  top: 35%;
+  left: 10%;
   background-color: #FFFECE;
-  width: 300px;
-  height: 300px;
+  width: 80%;
+  height: 50%;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -120,22 +96,20 @@
 .interior-lines {
   position: absolute;
   background-color: darkgrey;
-  top: 220px;
-  width: 300px;
+  top: 70%;
+  width: 100%;
   height: 5px;
 }
 
 .oven-door {
   position: absolute;
-  top: 125px;
-  left: 25px;
-  border-style: solid;
-  border-width: 50px;
-  border-color: #95BEC4;
+  top: 35%;
+  left: 10%;
+  box-shadow: 0 0 0 1.8vw inset #95BEC4;
   background-color: rgba(5, 5, 5, 0.1);
   border-radius: 10px;
-  width: 350px;
-  height: 350px;
+  width: 80%;
+  height: 50%;
   transform-origin: bottom;
   /*Speed of the Door animation*/
   transition: all 0.5s ease-in-out;
@@ -143,10 +117,10 @@
 
 .oven-handle {
   position: absolute;
-  top: -25px;
-  left: 25px;
+  top: .7vw;
+  left: 10%;
   height: 10px;
-  width: 200px;
+  width: 80%;
   background-color: #3B5570;
   border-radius: 5px;
 }
